fix: api routes
