# typescript/src/apis/HeyBibleApi.ts
@@ -4,7 +4,7 @@
  * Hey Bible App API
  * Public API for accessing Bible app data
  *
- * The version of the OpenAPI document: 1.0.0
+ * The version of the OpenAPI document: 1.0.1
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -15,32 +15,32 @@
 
 import * as runtime from '../runtime';
 import type {
-  ApiImagesGet200Response,
-  ApiNotesGet200Response,
-  ApiVersesGet200Response,
+  ImagesGet200Response,
+  NotesGet200Response,
+  VersesGet200Response,
 } from '../models/index';
 import {
-    ApiImagesGet200ResponseFromJSON,
-    ApiImagesGet200ResponseToJSON,
-    ApiNotesGet200ResponseFromJSON,
-    ApiNotesGet200ResponseToJSON,
-    ApiVersesGet200ResponseFromJSON,
-    ApiVersesGet200ResponseToJSON,
+    ImagesGet200ResponseFromJSON,
+    ImagesGet200ResponseToJSON,
+    NotesGet200ResponseFromJSON,
+    NotesGet200ResponseToJSON,
+    VersesGet200ResponseFromJSON,
+    VersesGet200ResponseToJSON,
 } from '../models/index';
 
-export interface ApiImagesGetRequest {
+export interface ImagesGetRequest {
     id?: number;
     limit?: number;
     offset?: number;
 }
 
-export interface ApiNotesGetRequest {
+export interface NotesGetRequest {
     id?: number;
     limit?: number;
     offset?: number;
 }
 
-export interface ApiVersesGetRequest {
+export interface VersesGetRequest {
     id?: number;
     limit?: number;
     offset?: number;
@@ -63,13 +63,13 @@ export interface HeyBibleApiInterface {
      * @throws {RequiredError}
      * @memberof HeyBibleApiInterface
      */
-    apiImagesGetRaw(requestParameters: ApiImagesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ApiImagesGet200Response>>;
+    imagesGetRaw(requestParameters: ImagesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ImagesGet200Response>>;
 
     /**
      * Retrieve a list of images with their associated verses, or a specific image if ID is provided
      * Get user\'s images
      */
-    apiImagesGet(requestParameters: ApiImagesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ApiImagesGet200Response>;
+    imagesGet(requestParameters: ImagesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ImagesGet200Response>;
 
     /**
      * Retrieve all notes with their associated verses for the user, or a specific note if ID is provided
@@ -81,13 +81,13 @@ export interface HeyBibleApiInterface {
      * @throws {RequiredError}
      * @memberof HeyBibleApiInterface
      */
-    apiNotesGetRaw(requestParameters: ApiNotesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ApiNotesGet200Response>>;
+    notesGetRaw(requestParameters: NotesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<NotesGet200Response>>;
 
     /**
      * Retrieve all notes with their associated verses for the user, or a specific note if ID is provided
      * Get notes
      */
-    apiNotesGet(requestParameters: ApiNotesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ApiNotesGet200Response>;
+    notesGet(requestParameters: NotesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<NotesGet200Response>;
 
     /**
      * Retrieve all verses for the user, or a specific verse if ID is provided
@@ -99,13 +99,13 @@ export interface HeyBibleApiInterface {
      * @throws {RequiredError}
      * @memberof HeyBibleApiInterface
      */
-    apiVersesGetRaw(requestParameters: ApiVersesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ApiVersesGet200Response>>;
+    versesGetRaw(requestParameters: VersesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<VersesGet200Response>>;
 
     /**
      * Retrieve all verses for the user, or a specific verse if ID is provided
      * Get verses
      */
-    apiVersesGet(requestParameters: ApiVersesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ApiVersesGet200Response>;
+    versesGet(requestParameters: VersesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<VersesGet200Response>;
 
 }
 
@@ -118,7 +118,7 @@ export class HeyBibleApi extends runtime.BaseAPI implements HeyBibleApiInterface
      * Retrieve a list of images with their associated verses, or a specific image if ID is provided
      * Get user\'s images
      */
-    async apiImagesGetRaw(requestParameters: ApiImagesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ApiImagesGet200Response>> {
+    async imagesGetRaw(requestParameters: ImagesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ImagesGet200Response>> {
         const queryParameters: any = {};
 
         if (requestParameters['id'] != null) {
@@ -140,7 +140,7 @@ export class HeyBibleApi extends runtime.BaseAPI implements HeyBibleApiInterface
         }
 
 
-        let urlPath = `/api/images`;
+        let urlPath = `/images`;
 
         const response = await this.request({
             path: urlPath,
@@ -149,15 +149,15 @@ export class HeyBibleApi extends runtime.BaseAPI implements HeyBibleApiInterface
             query: queryParameters,
         }, initOverrides);
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => ApiImagesGet200ResponseFromJSON(jsonValue));
+        return new runtime.JSONApiResponse(response, (jsonValue) => ImagesGet200ResponseFromJSON(jsonValue));
     }
 
     /**
      * Retrieve a list of images with their associated verses, or a specific image if ID is provided
      * Get user\'s images
      */
-    async apiImagesGet(requestParameters: ApiImagesGetRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ApiImagesGet200Response> {
-        const response = await this.apiImagesGetRaw(requestParameters, initOverrides);
+    async imagesGet(requestParameters: ImagesGetRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ImagesGet200Response> {
+        const response = await this.imagesGetRaw(requestParameters, initOverrides);
         return await response.value();
     }
 
@@ -165,7 +165,7 @@ export class HeyBibleApi extends runtime.BaseAPI implements HeyBibleApiInterface
      * Retrieve all notes with their associated verses for the user, or a specific note if ID is provided
      * Get notes
      */
-    async apiNotesGetRaw(requestParameters: ApiNotesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ApiNotesGet200Response>> {
+    async notesGetRaw(requestParameters: NotesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<NotesGet200Response>> {
         const queryParameters: any = {};
 
         if (requestParameters['id'] != null) {
@@ -187,7 +187,7 @@ export class HeyBibleApi extends runtime.BaseAPI implements HeyBibleApiInterface
         }
 
 
-        let urlPath = `/api/notes`;
+        let urlPath = `/notes`;
 
         const response = await this.request({
             path: urlPath,
@@ -196,15 +196,15 @@ export class HeyBibleApi extends runtime.BaseAPI implements HeyBibleApiInterface
             query: queryParameters,
         }, initOverrides);
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => ApiNotesGet200ResponseFromJSON(jsonValue));
+        return new runtime.JSONApiResponse(response, (jsonValue) => NotesGet200ResponseFromJSON(jsonValue));
     }
 
     /**
      * Retrieve all notes with their associated verses for the user, or a specific note if ID is provided
      * Get notes
      */
-    async apiNotesGet(requestParameters: ApiNotesGetRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ApiNotesGet200Response> {
-        const response = await this.apiNotesGetRaw(requestParameters, initOverrides);
+    async notesGet(requestParameters: NotesGetRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<NotesGet200Response> {
+        const response = await this.notesGetRaw(requestParameters, initOverrides);
         return await response.value();
     }
 
@@ -212,7 +212,7 @@ export class HeyBibleApi extends runtime.BaseAPI implements HeyBibleApiInterface
      * Retrieve all verses for the user, or a specific verse if ID is provided
      * Get verses
      */
-    async apiVersesGetRaw(requestParameters: ApiVersesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ApiVersesGet200Response>> {
+    async versesGetRaw(requestParameters: VersesGetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<VersesGet200Response>> {
         const queryParameters: any = {};
 
         if (requestParameters['id'] != null) {
@@ -234,7 +234,7 @@ export class HeyBibleApi extends runtime.BaseAPI implements HeyBibleApiInterface
         }
 
 
-        let urlPath = `/api/verses`;
+        let urlPath = `/verses`;
 
         const response = await this.request({
             path: urlPath,
@@ -243,15 +243,15 @@ export class HeyBibleApi extends runtime.BaseAPI implements HeyBibleApiInterface
             query: queryParameters,
         }, initOverrides);
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => ApiVersesGet200ResponseFromJSON(jsonValue));
+        return new runtime.JSONApiResponse(response, (jsonValue) => VersesGet200ResponseFromJSON(jsonValue));
     }
 
     /**
      * Retrieve all verses for the user, or a specific verse if ID is provided
      * Get verses
      */
-    async apiVersesGet(requestParameters: ApiVersesGetRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ApiVersesGet200Response> {
-        const response = await this.apiVersesGetRaw(requestParameters, initOverrides);
+    async versesGet(requestParameters: VersesGetRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<VersesGet200Response> {
+        const response = await this.versesGetRaw(requestParameters, initOverrides);
         return await response.value();
     }
 
